--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -1,4 +1,3 @@
-/* stylelint-disable docusaurus/copyright-header */
 /**
  * CSS files with the .module.css suffix will be treated as CSS modules
  * and scoped locally.
@@ -23,9 +22,104 @@
   justify-content: center;
 }
 
+.hero {
+  background-color: #2b3137;
+  padding: 48px;
+}
+
+.heroInner {
+  margin: 0 auto;
+  max-width: 1100px;
+  padding: 0 20px;
+}
+
+.heroProjectTagline {
+  color: #fff;
+  font-size: 50px;
+  margin: 0;
+}
+
+.heroProjectKeywords {
+  color: var(--ifm-color-tags);
+}
+.space {
+  margin: 0px 00px 0px 20px;
+}
+
+@keyframes jackInTheBox {
+  from {
+    opacity: 0;
+    transform: scale(0.1) rotate(30deg);
+    transform-origin: center bottom;
+  }
+
+  50% {
+    transform: rotate(-10deg);
+  }
+
+  70% {
+    transform: rotate(3deg);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.heroLogo {
+  animation-duration: 2s;
+  animation-name: jackInTheBox;
+  float: right;
+  margin-top: 20px;
+  padding: 0 20px 20px;
+  max-width: 17%;
+}
+
+.indexCtas {
+  display: flex;
+  align-items: center;
+  margin-top: 24px;
+}
+
+.indexCtasGetStartedButton {
+  border: 2px solid var(--ifm-color-primary);
+  display: inline-block;
+  line-height: 1.2em;
+  text-decoration: none !important;
+  text-transform: uppercase;
+  transition: background 0.3s, color 0.3s;
+  border-radius: 8px;
+  color: #fff;
+  font-size: 24px;
+  font-weight: bold;
+  padding: 18px 45px;
+}
+
+.indexTryMeButton {
+  border: 2px solid var(--ifm-color-primary);
+  display: inline-block;
+  line-height: 1.2em;
+  text-decoration: none !important;
+  text-transform: uppercase;
+  transition: 0.3s;
+  border-radius: 8px;
+  background-color: var(--ifm-color-primary);
+  color: #fff;
+  font-size: 24px;
+  font-weight: bold;
+  padding: 18px 45px;
+}
+
+.indexTryMeButton:hover {
+  opacity: 0.8;
+  color: white;
+}
+
 .features {
   display: flex;
   align-items: center;
+  text-align: center;
   padding: 2rem 0;
   width: 100%;
 }
@@ -33,4 +127,66 @@
 .featureImage {
   height: 200px;
   width: 200px;
+}
+
+.announcement {
+  font-weight: bold;
+  font-size: 24px;
+  padding: 48px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.announcementDark {
+  background-color: #20232a;
+  color: #fff;
+}
+
+.announcementInner {
+  margin: 0 auto;
+  max-width: 768px;
+  color: var(--ifm-color-tags);
+}
+
+@media only screen and (max-width: 768px) {
+  .hero {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .heroInner {
+    padding: 0;
+  }
+
+  .heroProjectTagline {
+    font-size: 36px;
+    text-align: center;
+  }
+
+  .heroLogo {
+    display: block;
+    float: none;
+    margin: 0 auto;
+  }
+
+  .indexCtas {
+    --ifm-button-size-multiplier: 1.6;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-top: 24px;
+  }
+
+  .indexCtas a:last-of-type {
+    margin: 20px 36px;
+  }
+
+  .indexCtasGitHubButtonWrapper {
+    display: flex;
+  }
+
+  .indexCtasGitHubButton {
+    border: none;
+    overflow: hidden;
+  }
 }
