--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,7 +7,7 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #02569b;
+  --ifm-color-primary: #032845;
   --ifm-color-tags: #38acfb;
   --ifm-color-primary-dark: #024d8b;
   --ifm-color-primary-darker: #024984;
